fix dropdown alignment

--- a/src/assets/styling/FilterDropdown.scss
+++ b/src/assets/styling/FilterDropdown.scss
@@ -25,7 +25,7 @@
         z-index: 0;    
     }
     .dropdown-menu{
-        width: 56%;
+        padding: 0 63px 0 0;
         border: none;
         margin-top: 3px !important;
         background-color: var(--header-bg);
